# trackr

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
docs/: usage.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json
opencode/: trackr.md
opencode/agents/: trackr-planner.md  trackr.md
opencode/skills/trackr/: SKILL.md
src/trackr/: __init__.py  __main__.py  cli.py  errors.py  models.py  storage.py
tests/: conftest.py  test_cli.py  test_models.py  test_storage.py
