[project]
name = "trackr"
version = "0.1.0"
description = "A per-repository CLI task tracker (Git-style local state)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "trackr" }]
license = { text = "MIT" }
keywords = ["cli", "tasks", "todo", "tracker"]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
trackr = "trackr.cli:app"

[project.urls]
Homepage = "https://example.com/trackr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trackr"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
